# zorius

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  run.sh
.github/workflows/: docker-image.yml  rust.yml
.insomnia/Request/: req_08d2147bf5c148cf890977420084f796.yml  req_0e287e91055f4312b640a48dd54d7d01.yml  req_13b82b6c896840f6afbee2ca4e659b47.yml  req_28d86dd941874695852654cc838dbe73.yml  req_2f7aab0b20ab4c1090ec925ec626d5de.yml  req_340744a0c1c7454e9c1f1556b916855b.yml  req_3926f95bae264118b8b18f3c80806cf9.yml  req_3c79c4caa21c41659060eb445f873dc1.yml  req_4f1a805d27874868a19a032692753b19.yml  req_51bd6466a12a4470a30d4a604300bada.yml  req_53166be4eede46dc93f35209b8dfcaa3.yml  req_5bcc8a9d42494ed6b2b3820ddf6d61de.yml  req_861c15e3d3ed473aa62aa98636c2a420.yml  req_97369c2ea6e8476490b509b5ec67f8f4.yml  req_9f1787f71ba146ec8d010948ad9f3429.yml  req_a1c44e87de5843698ed2203e11615349.yml  req_a7ce716773924d37a151b0af62f40e93.yml  req_ad39493d57e54172b1b373609b41bf89.yml  req_b645e88f3d064644bcfa2facbcd9319d.yml  req_bf2515585ed24cb5b044add6f8003fba.yml  req_d11aea52dafa4e5fb9490d231d59f375.yml  req_d36f1285fc0c4a61813dff8c7f50ce43.yml  req_da6382cb448f434f8294ea971beed322.yml  req_df8928dc11b9473b9c3c17d2df9679f7.yml  req_dfc4e882d6594d5a9de00658697ec4fe.yml  req_e6b21a739c31450eb53590379b735436.yml  req_f79b7f9a57f7419bbb1e15e06cde1cae.yml
.insomnia/RequestGroup/: fld_092428f87e0a48ce81b48819678fa5ef.yml  fld_09bf02ae432e424bbe12e938aec94dec.yml  fld_2e658fcc1f434e3ab10b24eb14f68bb7.yml  fld_3e66f39305c94329a852db8c9bb4d93c.yml  fld_5a3b28a421074c939e87852c164cb530.yml  fld_a285a9bb1a4c4901a6e0db0151841170.yml
.insomnia/UnitTest/: ut_4dbf97666cee4595a65434fd83dcb954.yml  ut_60938199f24b420598cc79a660a3e25e.yml  ut_64e8517126d441618d0667aba5b5ef5a.yml  ut_698218697d7f4a55ae589501257c6442.yml  ut_69d675b69f1244e5a86a37091288f77c.yml  ut_70218c818ed641b4838f6c95122033a7.yml  ut_8c857215b7af4095b58f73e9cba527d9.yml
.insomnia/UnitTestSuite/: uts_ac893489126e4e3da5a1d2a83f483182.yml
.insomnia/Workspace/: wrk_6ad912a18dd44599a8e4cde1ad5f8776.yml
assets/: test.html
config/: default.toml
entity/: Cargo.toml
entity/src/: customer.rs  intern_merchandise.rs  lib.rs  project.rs  time_record.rs  user.rs  work_report.rs
k8s/: deployment.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20220312_011700_create_user_table.rs  m20220312_011800_create_customer_table.rs  m20220312_011900_create_project_table.rs  m20220312_012000_create_time_record_table.rs  m20220312_012000_create_work_report_table.rs  m20220312_012100_create_time_record_table.rs  m20220312_012100_create_work_report_table.rs
migrations/: 20210628192224_create-tables.sql  20210715162050_create_tables.sql  20210925211041_remove_satus_from_intern_merch.sql  20210927165456_intern_merch_add_controller.sql
sql/: count_intern_merch.sql  count_users.sql  get_intern_merch_by_id.sql  list_intern_merch.sql  list_users.sql  new_intern_merch.sql  new_user.sql  new_user2.sql  reset_password.sql  update_role.sql  update_user.sql
src/: api.rs  config.rs  database.rs  errors.rs  guards.rs  helper.rs  mailer.rs  main.rs  merchandise.rs  validators.rs
src/api/: auth.rs  claim.rs  company.rs  customer.rs  guards.rs  intern_merchandise.rs  mod.rs  mutations.rs  project.rs  querys.rs  role.rs  search_querys.rs  simple_broker.rs  subscriptions.rs  time_recording.rs  time_records.rs  user.rs  work_account.rs  work_report.rs
src/customer/: db.rs  mod.rs  model.rs
src/intern_merchandise/: db.rs  mod.rs  model.rs
src/middleware/: auth.rs  mod.rs
src/models/: auth.rs  company.rs  customer.rs  intern_merchandise.rs  mod.rs  permissions.rs  project.rs  roles.rs  upload.rs  user.rs  users.rs  work_report.rs  wr_relation.rs
src/models/merchandise/: intern_merchandise.rs  mod.rs
src/models/project_management/: project.rs
src/models/time_recording/: activity.rs  customer.rs  holidays.rs  mod.rs  time_record.rs  workday.rs
src/project/: db.rs  mod.rs  model.rs
src/user/: db.rs  mod.rs  model.rs
src/view/: customer.rs  intern_merchandise.rs  mod.rs  project.rs  time_record.rs  users.rs  work_report.rs
src/work_report/: db.rs  mod.rs  model.rs
templates/: intern_merch_used.html
zorius/: .gitignore  README.md  angular.json  karma.conf.js  package-lock.json  package.json
zorius/src/: index.html  styles.scss
(+32 files in other folders)
