[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[lib]
name = "entity"
path = "src/lib.rs"


[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = "0.4.19"

[dependencies.sea-orm]
# path = "../../../" # remove this line in your own project
version = "^0.6.0"
features = [
  "macros",
  "debug-print",
  "runtime-actix-rustls",
  "sqlx-mysql",
   "sqlx-postgres",
]
default-features = false